# toolbox-dkpaperstudio

./: .gitignore  login-to-etsy.command  package_products.command  pyproject.toml  repackage_mugfiles.py  upload-products.command
dkstudio/: package_products.py  read_paths.py  shop_storage.py  upload_products.py  ux.py
dkstudio/etsy/: authorize.py  client.py  list_payments.py  list_products.py  ping.py
dkstudio/gumroad/: authorize.py
