[tool.poetry]
name = "dkstudio"
version = "0.1.0"
description = "Productivity tools"
authors = ["Jason Kraus <zbyte64@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
Authlib = "^0.15.5"
requests = "^2.26.0"
starlette = "^0.17.1"
uvicorn = "^0.16.0"
httpx = "^0.21.1"
itsdangerous = "^2.0.1"
python-dotenv = "^0.19.2"
thefuzz = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
package-products = "dkstudio.package_products:main"
ping-etsy = "dkstudio.etsy.ping:main"
authorize-etsy = "dkstudio.etsy.authorize:main"
list-etsy-products = "dkstudio.etsy.list_products:main"
list-etsy-receipts = "dkstudio.etsy.list_payments:main"
upload-products = "dkstudio.upload_products:main"